5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1662_2967.log
== TEST (2019-04-15 14:20:14) 
-- CODE:
var1=float(input("Minha altura: ")
var2=float(input("Altura do amigo: "))
if(var1>=1.37 and var2>=1.37):
	msg="Sim"
if(var1>=1.37 and var2<1.37):
	msg="Sim"
if(var1<1.37 and var2>=1.37):
	msg="Sim"
if(var1<1.37 and var2<1.37):
	msg="Nao"
-- ERROR:
File "XXXX", line 2
    var2=float(input())
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:22:27) 
-- CODE:
var1=float(input("Minha altura: ")
var2=float(input("Altura do amigo: "))
if(var1>=1.37 and var2>=1.37):
	msg="Sim"
if(var1>=1.37 and var2<1.37):
	msg="Sim"
if(var1<1.37 and var2>=1.37):
	msg="Sim"
if(var1<1.37 and var2<1.37):
	msg="Nao"
print(msg)
if(var1>var2):
	print(var1)
if(var1<var2):
	print(var2)			  
-- ERROR:
File "XXXX", line 2
    var2=float(input())
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:22:40) 
-- CODE:
var1=float(input("Minha altura: "))
var2=float(input("Altura do amigo: "))
if(var1>=1.37 and var2>=1.37):
	msg="Sim"
if(var1>=1.37 and var2<1.37):
	msg="Sim"
if(var1<1.37 and var2>=1.37):
	msg="Sim"
if(var1<1.37 and var2<1.37):
	msg="Nao"
print(msg)
if(var1>var2):
	print(var1)
if(var1<var2):
	print(var2)			  
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:22:54) 
-- CODE:
var1=float(input("Minha altura: "))
var2=float(input("Altura do amigo: "))
if(var1>=1.37 and var2>=1.37):
	msg="Sim"
if(var1>=1.37 and var2<1.37):
	msg="Sim"
if(var1<1.37 and var2>=1.37):
	msg="Sim"
if(var1<1.37 and var2<1.37):
	msg="Nao"
print(msg)
if(var1>var2):
	print(var1)
if(var1<var2):
	print(var2)			  
-- EXECUTION TIME:
0.140801
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Sim
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:32:30) 
-- CODE:
var1=float(input("Minha altura: "))
var2=float(input("Altura do amigo: "))
if(var1>=1.37 and var2>=1.37):
	msg="Sim"
if(var1>=1.37 and var2<1.37):
	msg="Sim"
if(var1<1.37 and var2>=1.37):
	msg="Sim"
if(var1<1.37 and var2<1.37):
	msg="Nao"
print(msg)
if(var1>var2):
	print(var1)
if(var1<var2):
	print(var2)			  
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:35:01) 
-- CODE:
var1=float(input("Minha altura: "))
var2=float(input("Altura do amigo: "))
if(var1>=1.37 and var2>=1.37):
	msg="Sim"
if(var1>=1.37 and var2<1.37):
	msg="Sim"
if(var1<1.37 and var2>=1.37):
	msg="Sim"
if(var1<1.37 and var2<1.37):
	msg="Nao"
print(msg)
if(var1>var2):
	print(var1)
if(var1<var2):
	print(var2)			  
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:35:15) 
-- CODE:
var1=float(input("Minha altura: "))
var2=float(input("Altura do amigo: "))
if(var1>=1.37 and var2>=1.37):
	msg="Sim"
if(var1>=1.37 and var2<1.37):
	msg="Sim"
if(var1<1.37 and var2>=1.37):
	msg="Sim"
if(var1<1.37 and var2<1.37):
	msg="Nao"
print(msg)
if(var1>var2):
	print(var1)
if(var1<var2):
	print(var2)			  
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:35:26) 
-- CODE:
var1=float(input("Minha altura: "))
var2=float(input("Altura do amigo: "))
if(var1>=1.37 and var2>=1.37):
	msg="Sim"
if(var1>=1.37 and var2<1.37):
	msg="Sim"
if(var1<1.37 and var2>=1.37):
	msg="Sim"
if(var1<1.37 and var2<1.37):
	msg="Nao"
print(msg)
if(var1>var2):
	print(var1)
if(var1<var2):
	print(var2)			  
-- EXECUTION TIME:
0.154799
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Sim
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
